Remove FafService and Implement Mapstruct and ElideNavigator